objects/User.object
<CustomObject>
    <fields>
        <fullName>ACLS_Meeting_Link__c</fullName>
        <description>Meeting link for zoom meeting</description>
        <label>Meeting Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EFX__Receive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFX__Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentId__c</fullName>
        <label>Five9 Agent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent_Login_TimeStamp__c</fullName>
        <label>Five9Agent Login TimeStamp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>